[FIX] z-index

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -10,6 +10,7 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
+  z-index: 1001;
   /* b  order: 1px solid #cdcdcd; */
 }
 
